...
                    MaterialTheme.colorScheme.primary
                )
            )
            LazyColumn(
                contentPadding = PaddingValues(16.dp),
                verticalArrangement = Arrangement.spacedBy(8.dp),
                modifier = Modifier.weight(1f).testTag("CharaList"),
                state = listState
            ) {
                items(characters, key = { it.id }) { data ->
                    Row(
                        modifier = Modifier
                            .fillMaxWidth()
...
